# OpenLogLess

./: .gitignore  README.md  app.db  pyproject.toml
app/: config.py  main.py
app/api/v1/endpoints/: __init__.py
app/db/: __init__.py  migrate.py
app/db/models/: Log.py  Token.py  User.py  __init__.py
app/root/: __init__.py
app/schema/: __init__.py
app/static/: custom.css
app/templates/: index.html  signup_page.html
